Added /station route