@@ -125,10 +125,10 @@ public class PointOfInterestService {
     }
 
     public List<PointOfInterestDTO> getPOIsByIds(List<Long> poiIdList) throws DartExploreException {
-        List<PointOfInterest> poiList = (!poiIdList.isEmpty()) ? StreamSupport.stream(pointOfInterestRepository.findAllById(poiIdList).spliterator(), false).collect(Collectors.toList())
+        List<PointOfInterest> poiList = (!poiIdList.isEmpty()) ? StreamSupport.stream(pointOfInterestRepository.findAllById(poiIdList).spliterator(), false).toList()
                 : new ArrayList<>();
 
-        if(poiIdList.size() != poiList.size()) // at least one invalid POI
+        if (poiIdList.size() != poiList.size()) // at least one invalid POI
             throw new DartExploreException("At least one POI in the list was invalid. Please correct and try again.");
 
         return poiList.stream().map(PointOfInterestDTO::prepareDTO).collect(Collectors.toList());
@@ -136,5 +136,22 @@ public class PointOfInterestService {
 
     public List<String> getAllTypes() {
         return pointOfInterestRepository.getAllTypes();
+    }
+
+    public static boolean doAllPOIsHaveAmenities(List<PointOfInterest> pois, List<Long> amenityIds) {
+        if (pois.isEmpty()) {
+            return false;
+        }
+
+        for (PointOfInterest poi : pois) {
+            if (!poi.getAmenities().stream().map(Amenity::getAmenityId).collect(Collectors.toSet()).containsAll(amenityIds)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    public static boolean doAllPOIsWithinWalkTime(List<PointOfInterest> pois, Integer maxWalkTime) {
+        return pois.stream().allMatch(poi -> poi.getWalkingDistance() <= maxWalkTime);
     }
 }
